# my-metrics-server

./: Cargo.toml  Dockerfile  build.rs  gulpfile.js  package-lock.json
.github/workflows/: release.yml
JavaScript/: AppSelector.js  AppSelector.js.map  Dialog.js  Dialog.js.map  HtmlMain.js  HtmlMain.js.map  main.js  main.js.map
TypeScript/: AppSelector.ts  Dialog.ts  HtmlMain.ts  contracts.d.ts  jQuery.d.ts  main.ts
proto/: TelemetryReader.proto  TelemetryWriter.proto
src/: events_amount_by_hour.rs  ignore_events.rs  lazy_lock.rs  main.rs  metric_file.rs  process_id_user_id_links.rs  settings.rs
src/app_ctx/: app_context.rs  mod.rs  to_write_queue.rs
src/background/: gc_metrics.rs  metrics_writer.rs  mod.rs  save_statistics_timer.rs
src/caches/: aggregated_metrics_cache.rs  app_duration_statistics.rs  itm.rs  metrics_by_action_name.rs  metrics_by_hour.rs  mod.rs  statistics_by_hour_and_service_name.rs
src/db/: mod.rs  repo.rs  sql_lite_pool.rs
src/db/dto/: metrics_dto.rs  statistics_dto.rs
src/db/hour_app_statistics/: dto.rs  statistics_repo.rs
src/db/hour_statistics/: dto.rs  hour_statistics_repo.rs  mod.rs
src/db/metrics/: dto.rs  metrics_repo.rs  mod.rs  sql_lite_pool.rs
src/db/permanent_metrics/: dto.rs  mod.rs  permanent_metrics_repo.rs
src/db/statistics/: mod.rs  statistics_repo.rs
src/flows/: get_available_hours_ago.rs  get_hour_app_data_statistics.rs  get_hour_app_statistics.rs  init.rs  mod.rs  upload_events.rs
src/flows/permanent_users/: add_permanent_user.rs  delete_permanent_user.rs  get_permanent_users.rs  mod.rs
src/grpc_server/: mappers.rs  mod.rs  server.rs  telemetry_reader.rs  telemetry_writer.rs
src/http/: builder.rs  start_up.rs
src/http/controllers/: mod.rs
src/http/controllers/home_controller/: index_action.rs
src/http/controllers/metric_event/: mod.rs  models.rs  post_metrics_action.rs
src/http/controllers/ui_controller/: get_by_process_id.rs  get_by_service_data_action.rs  get_service_metrics_overvew.rs  get_service_metrics_overview.rs  get_services_action.rs  mod.rs  models.rs
src/mappers/: metric_tags.rs  metrics.rs  mod.rs
src/permanent_users/: mod.rs  permanent_users_list.rs
src/postgres/: data_hashed.rs  dto.rs  mod.rs  repo.rs  statistics_repo.rs
src/postgres/dto/: metrics_dto.rs  mod.rs  statistics_dto.rs
src/scripts/: gc_files.rs  gc_metrics_pool.rs  get_metrics_files.rs  mod.rs  write_hour_app_data_statistics.rs  write_hour_statistics_to_db.rs
src/scripts/permanent_users/: load.rs  mod.rs  save.rs
src/services_metrics/: metric_event.rs  mod.rs  services_metrics.rs
src/timers/: gc.rs  metrics_writer.rs  mod.rs  save_statistics_timer.rs
src/to_write_queue/: metrics_chunk_by_process_id.rs  mod.rs  to_write_queue.rs
wwwroot/js/: app.js
