[package]
name = "my-telemetry-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
] }
my-http-server-controllers = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-postgres-macros = { tag = "0.4.8", git = "https://github.com/MyJetTools/my-postgres-macros.git" }
my-postgres = { tag = "0.4.8", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-tls",
] }


my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

my-grpc-extensions = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }


flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"

serde = "*"
serde_derive = "*"
serde_yaml = "*"
serde_json = "*"

async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
prost = "*"
prost-types = "*"
futures-core = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
