[package]
name = "my-telemetry-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }
my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

#my-postgres = { tag = "0.5.2", git = "https://github.com/MyJetTools/my-postgres.git", features = [
#    "with-tls",
#    "macros",
#] }

my-sqlite = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-sqlite.git", features = [
    "macros",
] }

my-settings-reader = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

my-grpc-extensions = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }


flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"

serde = "*"
serde_derive = "*"
serde_yaml = "*"
serde_json = "*"

async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
prost = "*"
prost-types = "*"
futures-core = "*"


ring = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
